name: attoparsec-enumerator
version: 0.2.0.4
synopsis: Convert an Attoparsec parser into an iteratee
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: jmillikin@gmail.com
copyright: Copyright (c) John Millikin 2010
build-type: Simple
cabal-version: >=1.6
category: Text, Parsing, Enumerator
stability: experimental
bug-reports: mailto:jmillikin@gmail.com
homepage: https://john-millikin.com/software/attoparsec-enumerator/
tested-with: GHC==6.12.1

source-repository head
  type: bazaar
  location: https://john-millikin.com/branches/attoparsec-enumerator/0.2/

source-repository this
  type: bazaar
  location: https://john-millikin.com/branches/attoparsec-enumerator/0.2/
  tag: attoparsec-enumerator_0.2.0.4

library
  ghc-options: -Wall

  build-depends:
      base >= 3 && < 5
    , attoparsec >= 0.8 && < 0.10
    , bytestring >= 0.9 && < 0.10
    , enumerator >= 0.4 && < 0.5

  exposed-modules:
    Data.Attoparsec.Enumerator
