name: attoparsec-enumerator
version: 0.2.0.5
license: MIT
license-file: license.txt
author: John Millikin <jmillikin@gmail.com>
maintainer: John Millikin <jmillikin@gmail.com>
build-type: Simple
cabal-version: >= 1.6
category: Text, Parsing, Enumerator
stability: experimental
homepage: https://john-millikin.com/software/attoparsec-enumerator/
bug-reports: mailto:jmillikin@gmail.com

synopsis: Convert an Attoparsec parser into an iteratee

source-repository head
  type: bazaar
  location: https://john-millikin.com/branches/attoparsec-enumerator/0.2/

source-repository this
  type: bazaar
  location: https://john-millikin.com/branches/attoparsec-enumerator/0.2/
  tag: attoparsec-enumerator_0.2.0.5

library
  ghc-options: -Wall

  build-depends:
      base >= 3 && < 5
    , attoparsec >= 0.8 && < 0.11
    , bytestring >= 0.9 && < 0.10
    , enumerator >= 0.4 && < 0.5

  exposed-modules:
    Data.Attoparsec.Enumerator
